Added defense presentation file and started working on it

--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,4 +1,4 @@
-% Created 2024-02-06 Tue 13:45
+% Created 2024-02-12 Mon 09:15
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -33,7 +33,7 @@
  pdftitle={Joint Track Machine Learning},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.2 (Org mode 9.7)}, 
+ pdfcreator={Emacs 29.1 (Org mode 9.7)}, 
  pdflang={English}}
 \begin{document}
 
@@ -42,10 +42,10 @@
 \tableofcontents
 \end{frame}
 
-\begin{frame}[label={sec:org107cf94},standout]{Acknowledgments}
+\begin{frame}[label={sec:org9eecd50},standout]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
-\begin{frame}[label={sec:org4139ab6}]{The Problem}
+\begin{frame}[label={sec:org2b7cb7e}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -69,7 +69,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org670abe6}]{Our Proposition}
+\begin{frame}[label={sec:orgc484a76}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's knee kinematics during \alert{\alert{activities of daily living}}.
@@ -81,7 +81,7 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga9b6d55}]{Constraints}
+\begin{frame}[label={sec:orgdba89f4}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -97,12 +97,12 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgf9fa086}]{Background - Projective Geometry}
+\begin{frame}[label={sec:org3380b5c}]{Background - Projective Geometry}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/perspective-projection.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org96a56d7}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:org2154104}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -116,7 +116,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org703a9ba}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:org1998fec}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -130,7 +130,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5d63555}]{Historical Overview}
+\begin{frame}[label={sec:org221d9f4}]{Historical Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -140,7 +140,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Roentgen Stereophotogrammetry
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org8fac610}]{Pre-Computed Projections}
+\begin{frame}[label={sec:org93f2248}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -150,11 +150,11 @@ Many different approaches have attempted to solve the model-image registration p
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/lavallee-distance-maps.png}
 \caption{From \autocite{lavalleeRecoveringPositionOrientation1995}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/banks-nfd-library.png}
@@ -163,7 +163,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga59a0b7}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:orgbba6e05}]{Limitations of Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -175,11 +175,11 @@ Many different approaches have attempted to solve the model-image registration p
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/lavallee-distance-maps.png}
 \caption{From \autocite{lavalleeRecoveringPositionOrientation1995}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/banks-nfd-library.png}
@@ -188,7 +188,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org390bda7}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:org697ebb4}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -198,11 +198,11 @@ Many different approaches have attempted to solve the model-image registration p
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/gao-skin-mocap.png}
 \caption{From \autocite{gaoInvestigationSoftTissue2008}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/lafortune-bone-mocap.png}
@@ -211,7 +211,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org60bc9f6}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:orgb12eb38}]{Limitations of Motion Capture}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Skin Mounted
@@ -224,11 +224,11 @@ Bone Pins
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/gao-skin-mocap.png}
 \caption{From \autocite{gaoInvestigationSoftTissue2008}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/lafortune-bone-mocap.png}
@@ -237,7 +237,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org08360b6}]{Biplane Imaging}
+\begin{frame}[label={sec:orgd10cc65}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -249,11 +249,11 @@ Bone Pins
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ivester-stereo-fluoromachine.png}
 \caption{Both from \autocite{ivesterReconfigurableHighSpeedStereoRadiography2015}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ivester-stereo-projection.png}
@@ -261,7 +261,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgfe4555e}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:org200e647}]{Limitations of Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -270,11 +270,11 @@ Bone Pins
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
-\begin{center}
+\begin{figure}[htbp]
+\centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ivester-stereo-fluoromachine.png}
 \caption{Both from \autocite{ivesterReconfigurableHighSpeedStereoRadiography2015}}
-\end{center}
-\vspace{-0.25in}
+\end{figure}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.75in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ivester-stereo-projection.png}
@@ -282,7 +282,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org476092e}]{Iterative Projections}
+\begin{frame}[label={sec:org1732476}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -307,7 +307,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org31ea132}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:org5d0b2c9}]{Limitations of (historic) Iterative Projection Methods}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -334,7 +334,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org0c3e953}]{Roentgen Stereophotogrammetry (RSA)}
+\begin{frame}[label={sec:org51e908f}]{Roentgen Stereophotogrammetry (RSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -352,7 +352,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org99d491e}]{Limitations of RSA}
+\begin{frame}[label={sec:org0b7fc7a}]{Limitations of RSA}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -371,8 +371,8 @@ Bone Pins
 \end{columns}
 \end{frame}
 \section{Aims}
-\label{sec:org35fd664}
-\begin{frame}[label={sec:org8d5bbc9}]{Aims}
+\label{sec:org36b0efc}
+\begin{frame}[label={sec:orgc351f3e}]{Aims}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{block}{Aims 1/2}
@@ -392,11 +392,11 @@ Joint Track Auto Toolkit
 \end{columns}
 \end{frame}
 \subsection{Aim 1 - Joint Track Machine Learning}
-\label{sec:orgeaa44ae}
-\begin{frame}[label={sec:org78c4da8}]{Goal}
+\label{sec:org397b883}
+\begin{frame}[label={sec:org04a3a88}]{Goal}
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
 \end{frame}
-\begin{frame}[label={sec:org4a8e944}]{Method}
+\begin{frame}[label={sec:orgfa9da2d}]{Method}
 \begin{itemize}
 \item Three-tiered approach
 \begin{itemize}
@@ -409,7 +409,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5e8c56e}]{Autonomous Implant Detection Using Convolutional Neural Networks}
+\begin{frame}[label={sec:orgc8769ae}]{Autonomous Implant Detection Using Convolutional Neural Networks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -427,7 +427,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga6f3570}]{Neural Network Data}
+\begin{frame}[label={sec:org8f17f43}]{Neural Network Data}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -450,7 +450,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga127c3b}]{Neural Network Robustness}
+\begin{frame}[label={sec:org353327d}]{Neural Network Robustness}
 \begin{itemize}
 \item Additional augmentations introduced during training \autocite{buslaevAlbumentationsFastFlexible2020}.
 \end{itemize}
@@ -458,7 +458,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/augmentations.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgbe0936e}]{Normalized Fourier Descriptor Shape Libraries}
+\begin{frame}[label={sec:org2aa0ba4}]{Normalized Fourier Descriptor Shape Libraries}
 \begin{columns}
 \begin{column}{0.37\columnwidth}
 \begin{itemize}
@@ -476,7 +476,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org7e03c2e}]{Pose Refinement Using Global Optimization}
+\begin{frame}[label={sec:org9d37a05}]{Pose Refinement Using Global Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -494,7 +494,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgba386a6}]{Contour-based Objective Function}
+\begin{frame}[label={sec:org65db075}]{Contour-based Objective Function}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -520,7 +520,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6253c95}]{Improving Robustness}
+\begin{frame}[label={sec:orgf01f1b2}]{Improving Robustness}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -535,7 +535,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5b8df5a}]{Optimization Routine}
+\begin{frame}[label={sec:org4b2ff90}]{Optimization Routine}
 \begin{itemize}
 \item No analytic form of the objective function exists, it \alert{\alert{must}} be sampled at points of interest.
 \begin{itemize}
@@ -543,7 +543,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org97ad3f4}]{Lipschitzian Optimization}
+\begin{frame}[label={sec:org630b88c}]{Lipschitzian Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -565,7 +565,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb1739b8}]{Lipschitzian Optimization without the Lipschitz Constant}
+\begin{frame}[label={sec:orgedeb46c}]{Lipschitzian Optimization without the Lipschitz Constant}
 \begin{center}
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jones-direct-title.png}
 \end{center}
@@ -580,7 +580,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-1D.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgbee7aa8}]{Trisecting Region}
+\begin{frame}[label={sec:org667bb30}]{Trisecting Region}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -606,7 +606,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org35e8522}]{Another Iteration}
+\begin{frame}[label={sec:orgb4188b8}]{Another Iteration}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -632,7 +632,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga8a1438}]{Determining Potentially Optimal Regions}
+\begin{frame}[label={sec:org3801fb4}]{Determining Potentially Optimal Regions}
 \begin{itemize}
 \item Convex hull \autocites{grahamEfficientAlgorithDetermining1972}[][]{jarvisIdentificationConvexHull1973}[][]{chanOptimalOutputsensitiveConvex1996}[][]{barberQuickhullAlgorithmConvex1996} of region size vs. center value
 \end{itemize}
@@ -641,7 +641,7 @@ Where
 \includegraphics[width=0.6\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-convex-hull.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org8f39f11}]{DiRECT for Joint Track Machine Learning}
+\begin{frame}[label={sec:orgca5803b}]{DiRECT for Joint Track Machine Learning}
 \begin{itemize}
 \item Search region is along all 6 degrees of freedom.
 \begin{itemize}
@@ -662,13 +662,13 @@ Stage & Budget [Iterations] & Search Range [mm,deg] & Dilation (pixels)\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org6996725}]{Testing Performance}
+\begin{frame}[label={sec:org31f1c30}]{Testing Performance}
 Now that we have our refined poses, how well does out system perform?
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgd4c4538}]{Validation}
+\begin{frame}[label={sec:orgb012e8e}]{Validation}
 \begin{itemize}
 \item Independent research group using Model-Based RSA.
 \item Determine the level of concordance between the two measurement systems
@@ -683,15 +683,15 @@ Now that we have our refined poses, how well does out system perform?
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org7efe242}]{Awards}
+\begin{frame}[label={sec:org64d1651}]{Awards}
 The work presented in this aim won the HAP Paul Award for Best Paper from the International Society for Technology in Arthroplasty's 2022 Annual Meeting.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ista-hap-paul-talk.png}
 \end{center}
 \end{frame}
 \subsection{Aim 2 - Overcoming Single-Plane Limitations}
-\label{sec:orgce7d90a}
-\begin{frame}[label={sec:org480ef44}]{Goal}
+\label{sec:org73a4772}
+\begin{frame}[label={sec:orgeb6bc01}]{Goal}
 \begin{itemize}
 \item The goal of this aim is to validate and test methods that can overcome single-plane limitations for model-image registration.
 \begin{itemize}
@@ -700,7 +700,7 @@ The work presented in this aim won the HAP Paul Award for Best Paper from the In
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org05c7add}]{Translation}
+\begin{frame}[label={sec:org2b445ce}]{Translation}
 \begin{itemize}
 \item Depth perception is lost when using a single camera.
 \item Utilize a virtual ``spring'' to constrain relative OOP translation between implant components.
@@ -715,7 +715,7 @@ Where
   ML \equiv \text{ Relative mediolateral translation }
 \end{equation*}
 \end{frame}
-\begin{frame}[label={sec:org64c8ed1}]{Symmetry Traps}
+\begin{frame}[label={sec:org245a49f}]{Symmetry Traps}
 With a symmetric tibial implant, the contour is not always a perfect heuristic for true pose. Human operators typically utilize relative varus-valgus to determine correct pose.
 
 Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high propensity for symmetry traps \autocite{jensenJointTrackMachine2022}.
@@ -724,7 +724,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figs/jtml-paper/fig6-symtrap.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org2b6a293}]{Solving the Symmetric Pose}
+\begin{frame}[label={sec:orga16edcd}]{Solving the Symmetric Pose}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Algorithm devised to ``flip'' pose into symmetric counterpart.
@@ -742,7 +742,7 @@ Algorithm devised to ``flip'' pose into symmetric counterpart.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga0d13db}]{Four Approaches}
+\begin{frame}[label={sec:org6b63e20}]{Four Approaches}
 \begin{itemize}
 \item Virtual ligaments
 \item Binary selection between two poses
@@ -750,7 +750,7 @@ Algorithm devised to ``flip'' pose into symmetric counterpart.
 \item Fully Connected Network
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org9c89d99}]{Virtual Ligaments}
+\begin{frame}[label={sec:orgbc630a1}]{Virtual Ligaments}
 \begin{equation*}
   J = \alpha L_{1}(I,P) + \beta ML(Fem,Tib) + \gamma VV(Fem,Tib)
 \end{equation*}
@@ -761,7 +761,7 @@ Where
   VV \equiv \text{  Relative Varus-Valgus rotation}
 \end{equation*}
 \end{frame}
-\begin{frame}[label={sec:orgc110357}]{Binary Selection}
+\begin{frame}[label={sec:org236f094}]{Binary Selection}
 \begin{enumerate}
 \item Determine optimized pose using \(L_1 + ML\)
 \item Calculate symmetric pose.
@@ -770,7 +770,7 @@ Where
 
 This method can simplify the selection criteria (one fewer hyperparameter).
 \end{frame}
-\begin{frame}[label={sec:orge1b5ebc}]{Bland-Altmann Calibration Constant}
+\begin{frame}[label={sec:orgfa27138}]{Bland-Altmann Calibration Constant}
 \begin{itemize}
 \item Utilizing Bland-Altmann plots from gold-standard kinematics, create a ``correction constant'' for relative varus/valgus (ad/abduction) angles.
 \item Notice linear trend in BA plots.
@@ -779,7 +779,7 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \includegraphics[width=0.75\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5d9e76b}]{Fully Connected Network}
+\begin{frame}[label={sec:orgc1bd81a}]{Fully Connected Network}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -802,7 +802,7 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3cb69ba}]{Timeline}
+\begin{frame}[label={sec:orgd36fe92}]{Timeline}
 \begin{itemize}
 \item All kinematics data has already been collected.
 \item Completed Methods
@@ -823,8 +823,8 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 Journal paper will be ready for submission by June.
 \end{frame}
 \subsection{Aim 3 - Pilot Human Study}
-\label{sec:org429eef6}
-\begin{frame}[label={sec:org6704d37}]{Goal}
+\label{sec:orgf828fac}
+\begin{frame}[label={sec:org7cf5b36}]{Goal}
 No kinematics studies have exclusively utilized Joint Track Machine Learning; let's be the first.
 
 What are we measuring?
@@ -838,7 +838,7 @@ What are we measuring?
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org1103abb}]{Methods}
+\begin{frame}[label={sec:org3057ca8}]{Methods}
 \begin{itemize}
 \item 20-30 patients
 \item \textasciitilde{}Dozen activities with fluoroscopic machine
@@ -851,11 +851,11 @@ What are we measuring?
 IRB approval \textasciitilde{}4 months out.
 \end{frame}
 \subsection{Aim 4 - Standardized Kinematics Exam}
-\label{sec:org783de9a}
-\begin{frame}[label={sec:orgea23c35}]{Goal}
+\label{sec:org32c8afb}
+\begin{frame}[label={sec:org31479a5}]{Goal}
 Establish a ``standard kinematics exam'' by determining the most statistically and anatomically relevent fluoroscopic image(s) to capture during a clinical visit.
 \end{frame}
-\begin{frame}[label={sec:org1b3022d}]{Motivation}
+\begin{frame}[label={sec:orgcceefd2}]{Motivation}
 \begin{itemize}
 \item We have standardized pain/outcome scores
 \begin{itemize}
@@ -870,7 +870,7 @@ Establish a ``standard kinematics exam'' by determining the most statistically a
 
 Autonomous kinematics measurements allow researchers to spend more time asking and answering questions rather than fiddling with annoying software.
 \end{frame}
-\begin{frame}[label={sec:org007bbc7}]{Method}
+\begin{frame}[label={sec:org159ad09}]{Method}
 \begin{itemize}
 \item Use images and kinematics from Aim 3.
 \item Utilize statistical methods to determine covariance and causal/corollary relationships.
@@ -881,23 +881,23 @@ Autonomous kinematics measurements allow researchers to spend more time asking a
 \end{itemize}
 \end{frame}
 \subsection{Aim 5 - Joint Track Auto Toolkit}
-\label{sec:org3f12229}
-\begin{frame}[label={sec:orgaa91c31}]{Joint Track Auto Toolkit (JTAT)}
+\label{sec:org0c7cdb8}
+\begin{frame}[label={sec:orge63743a}]{Joint Track Auto Toolkit (JTAT)}
 Create a freely available Python library that allows other researchers to utilize JTML's model-image registration framework. Extra emphasis will be placed on extensibility to allow other researchers to compose their own registration pipelines.
 \end{frame}
-\begin{frame}[label={sec:org2bbc07a},fragile, allowframebreaks, label=]{Presentations}
+\begin{frame}[label={sec:org7964be5},fragile, allowframebreaks, label=]{Presentations}
 \begin{refsection}
   \input{nocites-pres}
   \printbibliography[title=Presentations]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:orgb14d0ae},fragile, allowframebreaks, label=]{Publications}
+\begin{frame}[label={sec:org4284335},fragile, allowframebreaks, label=]{Publications}
 \begin{refsection}
   \input{nocites-pubs}
   \printbibliography[title=Publications]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:org6e15262}]{Timeline}
+\begin{frame}[label={sec:org8556f7e}]{Timeline}
 \begin{center}
 \begin{tabular}{ll}
 Date(s) & Event\\
@@ -919,12 +919,12 @@ December 2024 - April 2025 & Est. Graduation\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org493e625},standout]{Thank you!}
+\begin{frame}[label={sec:orga3621d4},standout]{Thank you!}
 Thanks for listening!!
 \end{frame}
 \section{References}
-\label{sec:orgdae9405}
-\begin{frame}[label={sec:orga2e2145},fragile, allowframebreaks, label=]{References}
+\label{sec:org63d3dff}
+\begin{frame}[label={sec:org59f4e8a},fragile, allowframebreaks, label=]{References}
 \AtNextBibliography{\tiny}
 \printbibliography
 \end{frame}
